added e2ee + background delivery

--- a/css/videoaudio.css
+++ b/css/videoaudio.css
@@ -19,5 +19,11 @@
     display: block;
   }
 
+  #user-item:focus-visible #del-icon{
+    display: block;
+  }
+  #user-item:active #del-icon{
+    display: block;
+  }
 
   
