--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   overflow: hidden;
+  position: fixed;
   width: 100vw;
 }
 #chat-root{
