--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
+  height: 100dvh;
   overflow: hidden;
   position: fixed;
   width: 100vw;
